@@ -424,7 +424,7 @@ class GetDataFiles(object):
             'portal_type': ['DataFile'],
             'path': '/'.join(self.context.getPhysicalPath()),
             'review_state': 'published',
-            'sort_on': 'filename'})
+            'sort_on': 'getObjPositionInParent'})
         if not brains:
             return False
         res = [brain.getObject() for brain in brains]
@@ -445,7 +445,7 @@ class GetDataFileLinks(object):
             'portal_type': ['DataFileLink'],
             'path': '/'.join(self.context.getPhysicalPath()),
             'review_state': 'published',
-            'sort_on': 'filename'})
+            'sort_on': 'getObjPositionInParent'})
         if not brains:
             return False
         res = [brain.getObject() for brain in brains]
@@ -466,7 +466,7 @@ class GetTablesByCategory(object):
         brains = cat.searchResults({
             'portal_type': ['DataTable'],
             'path': '/'.join(self.context.getPhysicalPath()),
-            'sort_on': 'sortable_title',
+            'sort_on': 'getObjPositionInParent',
             'review_state': 'published'
         })
 
